--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
         <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
+        <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
 
         <lingua.main.class>com.github.pemistahl.lingua.AppKt</lingua.main.class>
 
@@ -168,6 +169,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven.clean.plugin.version}</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>accuracy-reports</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
