--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.pemistahl</groupId>
     <artifactId>lingua</artifactId>
-    <version>0.2.2</version>
+    <version>0.3.0-SNAPSHOT</version>
 
     <name>Lingua</name>
     <description>A language detection library for Kotlin and Java, suitable for long and short text alike</description>
@@ -61,7 +61,7 @@
         <lingua.main.class>com.github.pemistahl.lingua.AppKt</lingua.main.class>
 
         <com.optimaize.languagedetector.version>0.6</com.optimaize.languagedetector.version>
-        <org.apache.tika.version>1.19.1</org.apache.tika.version>
+        <org.apache.tika.version>1.20</org.apache.tika.version>
         <slf4j.api.version>1.7.25</slf4j.api.version>
     </properties>
 
