--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 
         <kotlin.version>1.3.11</kotlin.version>
         <gson.version>2.8.5</gson.version>
+        <mapdb.version>3.0.7</mapdb.version>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
         <mockk.version>1.8.13.kotlin13</mockk.version>
         <dokka.version>0.9.17</dokka.version>
@@ -80,6 +81,17 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>${mapdb.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
