--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
         <gson.version>2.8.5</gson.version>
         <mapdb.version>3.0.7</mapdb.version>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
-        <mockk.version>1.8.13.kotlin13</mockk.version>
+        <assertj.version>3.11.1</assertj.version>
+        <mockk.version>1.9</mockk.version>
         <dokka.version>0.9.17</dokka.version>
         <jacoco.version>0.8.3-SNAPSHOT</jacoco.version>
 
@@ -109,6 +110,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -217,9 +224,12 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>accuracy-reports/lingua</directory>
-                            <directory>accuracy-reports/tika</directory>
-                            <directory>accuracy-reports/optimaize</directory>
+                            <directory>accuracy-reports</directory>
+                            <includes>
+                                <include>**/lingua/**</include>
+                                <include>**/tika/**</include>
+                                <include>**/optimaize/**</include>
+                            </includes>
                         </fileset>
                     </filesets>
                 </configuration>
