--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@ accuracy-reports/tika/* linguist-documentation
 accuracy-reports/optimaize/* linguist-documentation
 images/* linguist-documentation
 
+*.ipynb linguist-detectable=true
+accuracy-reports/accuracy-reports-analysis-notebook.ipynb linguist-documentation=false
 accuracy-reports/accuracy-reports-analysis-notebook.ipynb linguist-language=Jupyter Notebook
+
 src/main/kotlin/* linguist-language=Kotlin
 src/test/kotlin/* linguist-language=Kotlin
