--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 accuracy-reports/accuracy-reports-analysis-notebook.ipynb linguist-documentation=false
 accuracy-reports/accuracy-reports-analysis-notebook.ipynb linguist-language=Jupyter Notebook
 
-src/main/kotlin/* linguist-language=Kotlin
-src/test/kotlin/* linguist-language=Kotlin
+#src/main/kotlin/* linguist-language=Kotlin
+#src/test/kotlin/* linguist-language=Kotlin
