Add Dokka and Jacoco plugins to Gradle build

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.console=auto
 
 # options: quiet, warn, lifecycle, info, debug
 org.gradle.logging.level=lifecycle
+
+kotlin.parallel.tasks.in.project=true
