--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: java
 jdk:
     - oraclejdk8
     - openjdk8
+before_script:
+    - chmod +x gradlew
+script:
+    - ./gradlew check
+    - ./gradlew jacocoTestReport
 after_success:
     - bash <(curl -s https://codecov.io/bash)
