Add Greek language support

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ kotlin.parallel.tasks.in.project=true
 
 supportedDetectors=Lingua,Tika,Optimaize
 
-supportedLanguages=Afrikaans,Arabic,Belarusian,Bokmal,Bulgarian,Catalan,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Hungarian,Icelandic,Indonesian,Italian,Latin,Latvian,Lithuanian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Somali,Spanish,Swedish,Turkish,Vietnamese,Welsh
+supportedLanguages=Afrikaans,Arabic,Belarusian,Bokmal,Bulgarian,Catalan,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Hungarian,Icelandic,Indonesian,Italian,Latin,Latvian,Lithuanian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Somali,Spanish,Swedish,Turkish,Vietnamese,Welsh
 
 linguaMainClass=com.github.pemistahl.lingua.AppKt
 
