Add Maven publish plugin to build script

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,50 @@ org.gradle.logging.level=lifecycle
 
 kotlin.parallel.tasks.in.project=true
 
-supportedDetectors=Lingua,Tika,Optimaize
+linguaTaskGroup=Lingua-specific
 
-supportedLanguages=Afrikaans,Albanian,Arabic,Basque,Belarusian,Bokmal,Bulgarian,Catalan,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Hungarian,Icelandic,Indonesian,Irish,Italian,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Turkish,Vietnamese,Welsh
+linguaGroupId=com.github.pemistahl
+
+linguaArtifactId=lingua
+
+linguaVersion=0.4.0
+
+linguaName=Lingua
+
+linguaDescription=A natural language detection library for Java and other JVM languages, suitable for long and short text alike
+
+linguaLicenseId=Apache-2.0
+
+linguaLicenseName=The Apache License, Version 2.0
+
+linguaLicenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+
+linguaRepositoryName=nlp-libraries
+
+linguaWebsiteUrl=https://github.com/pemistahl/lingua
+
+linguaVcsUrl=https://github.com/pemistahl/lingua.git
+
+linguaIssueTrackerUrl=https://github.com/pemistahl/lingua/issues
+
+linguaDeveloperId=pemistahl
+
+linguaDeveloperName=Peter M. Stahl
+
+linguaDeveloperEmail=pemistahl@gmail.com
+
+linguaDeveloperUrl=https://github.com/pemistahl
+
+linguaScmConnection=scm:git:git://github.com/pemistahl/lingua.git
+
+linguaScmDeveloperConnection=scm:git:ssh://github.com:pemistahl/lingua.git
+
+linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
+
+linguaSupportedDetectors=Lingua,Tika,Optimaize
+
+linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Basque,Belarusian,Bokmal,Bulgarian,Catalan,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Hungarian,Icelandic,Indonesian,Irish,Italian,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Turkish,Vietnamese,Welsh
 
 linguaMainClass=com.github.pemistahl.lingua.AppKt
 
-csvHeader=language,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize
+linguaCsvHeader=language,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize
