--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=0.4.0
+linguaVersion=0.5.0-SNAPSHOT
 
 linguaName=Lingua
 
