Add option for parallel test report generation

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,8 @@ org.gradle.console=auto
 # options: quiet, warn, lifecycle, info, debug
 org.gradle.logging.level=lifecycle
 
+org.gradle.parallel=true
+
 kotlin.parallel.tasks.in.project=true
 
 linguaTaskGroup=Lingua-specific
