--- a/gradle.properties
+++ b/gradle.properties
@@ -64,7 +64,7 @@ linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
 
 linguaSupportedDetectors=Lingua,Tika,Optimaize
 
-linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Basque,Belarusian,Bengali,Bokmal,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Gujarati,Hebrew,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Korean,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Vietnamese,Welsh
+linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Basque,Belarusian,Bengali,Bokmal,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Gujarati,Hebrew,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Korean,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Urdu,Vietnamese,Welsh
 
 linguaMainClass=com.github.pemistahl.lingua.AppKt
 
