--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=0.5.0-SNAPSHOT
+linguaVersion=0.5.0
 
 linguaName=Lingua
 
