Change CSV column separator

--- a/gradle.properties
+++ b/gradle.properties
@@ -62,10 +62,10 @@ linguaScmDeveloperConnection=scm:git:ssh://github.com:pemistahl/lingua.git
 
 linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
 
-linguaSupportedDetectors=Lingua,Tika,Optimaize
+linguaSupportedDetectors=Optimaize,Tika,Lingua
 
 linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Basque,Belarusian,Bengali,Bokmal,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Korean,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Urdu,Vietnamese,Welsh
 
 linguaMainClass=com.github.pemistahl.lingua.AppKt
 
-linguaCsvHeader=language,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize
+linguaCsvHeader=language,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua
