--- a/gradle.properties
+++ b/gradle.properties
@@ -64,7 +64,7 @@ linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
 
 linguaSupportedDetectors=Optimaize,OpenNLP,Tika,Lingua
 
-linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Basque,Belarusian,Bengali,Bokmal,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Korean,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Urdu,Vietnamese,Welsh
+linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Basque,Belarusian,Bengali,Bokmal,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Korean,Latin,Latvian,Lithuanian,Malay,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Urdu,Vietnamese,Welsh
 
 linguaMainClass=com.github.pemistahl.lingua.AppKt
 
