Add KDoc strings

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ linguaVersion=0.6.0
 
 linguaName=Lingua
 
-linguaDescription=A natural language detection library for Java and other JVM languages, suitable for long and short text alike
+linguaDescription=A natural language detection library for Java and the JVM, suitable for long and short text alike
 
 linguaLicenseId=Apache-2.0
 
@@ -66,6 +66,6 @@ linguaSupportedDetectors=Optimaize,OpenNLP,Tika,Lingua
 
 linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,Belarusian,Bengali,Bokmal,Bosnian,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Esperanto,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Kazakh,Korean,Latin,Latvian,Lithuanian,Macedonian,Malay,Marathi,Mongolian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Serbian,Slovak,Slovene,Somali,Spanish,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Ukrainian,Urdu,Vietnamese,Welsh
 
-linguaMainClass=com.github.pemistahl.lingua.AppKt
+linguaMainClass=com.github.pemistahl.lingua.app.AppKt
 
 linguaCsvHeader=language,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize,average-opennlp,single-words-opennlp,word-pairs-opennlp,sentences-opennlp,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua
