--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ deploy:
     on:
       tags: true
       branch: master
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8
     file_glob: true
     file: build/libs/*.jar
     api_key:
