Update README and release notes

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=0.6.1-SNAPSHOT
+linguaVersion=0.6.1
 
 linguaName=Lingua
 
