Fix Japanese detection (#28 #40)

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,8 @@ org.gradle.logging.level=lifecycle
 
 org.gradle.parallel=true
 
+org.gradle.jvmargs=-Xmx8192m -XX:MaxPermSize=8192m -XX:+HeapDumpOnOutOfMemoryError
+
 kotlin.parallel.tasks.in.project=true
 
 linguaTaskGroup=Lingua-specific
