--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{kt,kts}]
+max_line_length = 120
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
