--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.logging.level=lifecycle
 
 org.gradle.parallel=true
 
-org.gradle.jvmargs=-Xmx8192m -XX:MaxPermSize=8192m -XX:+HeapDumpOnOutOfMemoryError
+#org.gradle.jvmargs=-Xmx8192m -XX:MaxPermSize=8192m -XX:+HeapDumpOnOutOfMemoryError
 
 kotlin.parallel.tasks.in.project=true
 
@@ -66,7 +66,7 @@ linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
 
 linguaSupportedDetectors=Optimaize,OpenNLP,Tika,Lingua
 
-linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,Belarusian,Bengali,Bokmal,Bosnian,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Esperanto,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Kazakh,Korean,Latin,Latvian,Lithuanian,Macedonian,Malay,Marathi,Mongolian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Serbian,Slovak,Slovene,Somali,Spanish,Swahili,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Ukrainian,Urdu,Vietnamese,Welsh
+linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,Belarusian,Bengali,Bokmal,Bosnian,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Esperanto,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Kazakh,Korean,Latin,Latvian,Lithuanian,Macedonian,Malay,Marathi,Mongolian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Serbian,Slovak,Slovene,Somali,Spanish,Swahili,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Ukrainian,Urdu,Vietnamese,Welsh,Zulu
 
 linguaMainClass=com.github.pemistahl.lingua.app.AppKt
 
