Add Tsonga language support (#51)

--- a/gradle.properties
+++ b/gradle.properties
@@ -64,7 +64,7 @@ linguaScmUrl=https://github.com/pemistahl/lingua/tree/master
 
 linguaSupportedDetectors=Optimaize,OpenNLP,Tika,Lingua
 
-linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,Belarusian,Bengali,Bokmal,Bosnian,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Esperanto,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Kazakh,Korean,Latin,Latvian,Lithuanian,Macedonian,Malay,Marathi,Mongolian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Serbian,Slovak,Slovene,Somali,Spanish,Swahili,Swedish,Tagalog,Tamil,Telugu,Thai,Turkish,Ukrainian,Urdu,Vietnamese,Welsh,Yoruba,Zulu
+linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,Belarusian,Bengali,Bokmal,Bosnian,Bulgarian,Catalan,Chinese,Croatian,Czech,Danish,Dutch,English,Esperanto,Estonian,Finnish,French,Georgian,German,Greek,Gujarati,Hebrew,Hindi,Hungarian,Icelandic,Indonesian,Irish,Italian,Japanese,Kazakh,Korean,Latin,Latvian,Lithuanian,Macedonian,Malay,Marathi,Mongolian,Norwegian,Nynorsk,Persian,Polish,Portuguese,Punjabi,Romanian,Russian,Serbian,Slovak,Slovene,Somali,Spanish,Swahili,Swedish,Tagalog,Tamil,Telugu,Thai,Tsonga,Turkish,Ukrainian,Urdu,Vietnamese,Welsh,Yoruba,Zulu
 
 linguaMainClass=com.github.pemistahl.lingua.app.AppKt
 
