--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=1.0.0-SNAPSHOT
+linguaVersion=1.0.0
 
 linguaName=Lingua
 
