--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,9 @@ trim_trailing_whitespace = true
 [*.{kt,kts}]
 max_line_length = 120
 
+[*.yml]
+indent_size = 2
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
