--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,16 @@ dist: trusty
 
 language: java
 
+addons:
+  apt:
+    packages:
+      - openjdk-6-jdk
+
 jdk:
-  - oraclejdk8
+  - openjdk6
+  - openjdk7
   - openjdk8
+  - oraclejdk11
 
 before_script:
   - chmod +x gradlew
@@ -29,7 +36,7 @@ deploy:
     on:
       tags: true
       branch: master
-      condition: $TRAVIS_JDK_VERSION = oraclejdk8
+      condition: $TRAVIS_JDK_VERSION = openjdk6
     file_glob: true
     file: build/libs/*.jar
     api_key:
