--- a/.github/workflows/lingua-ci.yml
+++ b/.github/workflows/lingua-ci.yml
@@ -5,9 +5,9 @@ on: [push, pull_request]
 jobs:
   build-and-test:
     name: Build and test on Java ${{ matrix.java-version }}
-    
+
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         java-version: [ 8, 11, 14 ]
@@ -15,12 +15,12 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-        
+
       - name: Set up Java
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java-version }}
-      
+
       - name: Store or retrieve Gradle caches
         uses: actions/cache@v2
         with:
@@ -29,6 +29,14 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: ${{ runner.os }}-gradle-
-      
+
       - name: Build and test with Gradle
         run: ./gradlew check
+
+      - name: Create code coverage report
+        if: ${{ github.event_name == 'push' }}
+        run: ./gradlew jacocoTestReport
+
+      - name: Upload code coverage report to Codecov
+        if: ${{ github.event_name == 'push' }}
+        uses: codecov/codecov-action@v1
