--- a/.github/workflows/lingua-ci.yml
+++ b/.github/workflows/lingua-ci.yml
@@ -1,15 +1,17 @@
 name: Lingua CI
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build-and-test:
-    name: Build and test on Java ${{ matrix.java-version }}
+    name: Java ${{ matrix.java-version }} on ${{ matrix.os }}
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         java-version: [ 8, 11, 14 ]
 
     steps:
@@ -30,13 +32,19 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: ${{ runner.os }}-gradle-
 
-      - name: Build and test with Gradle
+      - name: Build and test with Gradle on Ubuntu and macOS
+        if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
         run: ./gradlew check
 
+      - name: Build and test with Gradle on Windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: gradlew.bat check
+        shell: cmd
+
       - name: Create code coverage report
-        if: ${{ matrix.java-version == '8' && github.event_name == 'push' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.java-version == '8' && github.event_name == 'push' }}
         run: ./gradlew jacocoTestReport
 
       - name: Upload code coverage report to Codecov
-        if: ${{ matrix.java-version == '8' && github.event_name == 'push' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.java-version == '8' && github.event_name == 'push' }}
         uses: codecov/codecov-action@v1
