--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,15 @@
-name: Lingua CI
+name: build
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build-and-test:
+  build:
     name: Java ${{ matrix.java-version }} on ${{ matrix.os }}
 
     runs-on: ${{ matrix.os }}
@@ -12,15 +18,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        java-version: [ 8, 11, 14 ]
+        java-version: [ 8, 11, 16 ]
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
 
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: ${{ matrix.java-version }}
 
       - name: Store or retrieve Gradle caches
