Ensure the required encoding for JVM on Windows

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,9 @@ org.gradle.logging.level=lifecycle
 
 org.gradle.parallel=true
 
+# for error-free compilation and testing on Windows
+org.gradle.jvmargs='-Dfile.encoding=UTF-8'
+
 kotlin.parallel.tasks.in.project=true
 
 linguaTaskGroup=Lingua-specific
