Add some minor changes to Gradle files

--- a/gradle.properties
+++ b/gradle.properties
@@ -69,3 +69,5 @@ linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,B
 linguaMainClass=com.github.pemistahl.lingua.app.AppKt
 
 linguaCsvHeader=language,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize,average-opennlp,single-words-opennlp,word-pairs-opennlp,sentences-opennlp,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua
+
+githubPackagesUrl=https://maven.pkg.github.com/pemistahl/lingua
