Add missing GitHub token to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,3 +31,5 @@ jobs:
         with:
           name: Lingua ${{ steps.get_version.outputs.version-without-v }}
           files: build/libs/*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
