--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=1.1.0
+linguaVersion=1.2.0-SNAPSHOT
 
 linguaName=Lingua
 
