Update documentation and release notes

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=1.1.1-SNAPSHOT
+linguaVersion=1.1.1
 
 linguaName=Lingua
 
