--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-# Copyright Â© 2018-today Peter M. Stahl pemistahl@gmail.com
+# Copyright © 2018-today Peter M. Stahl pemistahl@gmail.com
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -29,7 +29,7 @@ linguaGroupId=com.github.pemistahl
 
 linguaArtifactId=lingua
 
-linguaVersion=1.1.1
+linguaVersion=1.2.0-SNAPSHOT
 
 linguaName=Lingua
 
