--- a/gradle.properties
+++ b/gradle.properties
@@ -61,6 +61,6 @@ linguaSupportedLanguages=Afrikaans,Albanian,Arabic,Armenian,Azerbaijani,Basque,B
 
 linguaMainClass=com.github.pemistahl.lingua.app.AppKt
 
-linguaCsvHeader=language,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize,average-opennlp,single-words-opennlp,word-pairs-opennlp,sentences-opennlp,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-lingua,single-words-lingua,word-pairs-lingua,sentences-lingua
+linguaCsvHeader=language,average-optimaize,single-words-optimaize,word-pairs-optimaize,sentences-optimaize,average-opennlp,single-words-opennlp,word-pairs-opennlp,sentences-opennlp,average-tika,single-words-tika,word-pairs-tika,sentences-tika,average-lingua-low,single-words-lingua-low,word-pairs-lingua-low,sentences-lingua-low,average-lingua-high,single-words-lingua-high,word-pairs-lingua-high,sentences-lingua-high
 
 githubPackagesUrl=https://maven.pkg.github.com/pemistahl/lingua
